Ensure hidden text is off-screen on larger screens

--- a/system/assets/css/admin/specific/login/loginLayout.less
+++ b/system/assets/css/admin/specific/login/loginLayout.less
@@ -22,7 +22,7 @@ html.presidecms {
 
 			.cms-brand {
 				height      : 48px;
-				text-indent : -999px;
+				text-indent : -999em;
 				background : url( ../../../../images/logos/preside-logo-for-login.png ) no-repeat center center;
 
 				&.pulled-left {
